# crafty_backend

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
crafty/: firebase_key.json  firebase_utils.py  main.py
project_name/: main.py
workflows/: deploy.yml
