[tool.poetry]
name = "crafty"
version = "0.1.0"
description = ""
authors = ["ShinnosukeUesaka <shinnosuke.uesaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
openai = "^1.12.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
firebase-admin = "^6.4.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
